--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ I'll trust the Universe will always bring me to you</p>
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
-                    <a href="https://github.com/femascheti/minhas-leituras">Ver código do projeto</a>
+                    <a href="https://www.youtube.com/watch?v=IpFX2vq8HKw">Ver musica  </a>
+                    
                 </div>
             </div>
         </div>
@@ -157,10 +157,8 @@ Into view</p>
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
-                        vivo</a>
-                    <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do
-                        projeto</a>
+                    <a href="https://www.youtube.com/watch?v=7RWbq-lbBlk">Ver musica</a>
+                   
                 </div>
             </div>
         </div>
@@ -192,10 +190,11 @@ You turned out the lights
 Now I'm paralyzed
 Still stuck in that time when we called it love
 But even the Sun sets in paradise</p>
+
                     <img src="img/projeto-3.jpg" alt="Projeto 3" class="img-fluid w-100">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
+                    <a href="https://www.youtube.com/watch?v=KRaWnd3LJfs">Ver musica</a>
                 </div>
             </div>
         </div>
